fixed ellipsis not showing when the text is too close to the edge

--- a/app/Components/SideBar/Folder/styles.module.scss
+++ b/app/Components/SideBar/Folder/styles.module.scss
@@ -15,6 +15,7 @@
   overflow: hidden;
   text-align: left;
   padding-left: 40px;
+  padding-right: 10px;
 }
 
 .folderText {
