--- a/app/Components/SideBar/Node/styles.module.scss
+++ b/app/Components/SideBar/Node/styles.module.scss
@@ -16,6 +16,7 @@
   overflow: hidden;
   text-align: left;
   padding-left: 40px;
+  padding-right: 10px;
 }
 
 .nodeText {
