--- a/app/Components/SideBar/styles.module.scss
+++ b/app/Components/SideBar/styles.module.scss
@@ -2,7 +2,7 @@
 
 .sidebar {
   background-color: $sidebarBackground;
-  width: 250px;
+  width: 300px;
   height: 100%;
   border: 2px solid $trim;
   display: flex;
